@@ -1,4 +1,7 @@
 Diskpoll 0.1.3-stable, not released yet
+ - When receiving a .PKT file and a file with this name already exists, the
+   new file is longer renamed to .PK1, but the base name (before the dot) is
+   changed. Some tossers did not properly recognise .PK1 files.
  - Diagnosed a bug in the OS/2 Warp 4 (without mpts/peer fixes) peer/requester
    code and provided a workound option "-w" for it. See README for more info.
  - New "-d" option to give me additional information when users report
